# img-squeeze

./: .claude-workflow.yml  .coderabbit.yaml  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  claude-workflow.sh  debug_resize.rs  debug_test.rs
.claude-workflow/config/: claude-workflow.yml
.github/: .coderabbit.yml
.github/workflows/: coderabbit_review.yml
benches/: compression_bench.rs
claude-agent/: Cargo.toml
claude-agent/examples/: basic_usage.rs  pr_review.rs
claude-agent/src/: agents.rs  config.rs  core.rs  github.rs  lib.rs  mcp_tools.rs  project_detector.rs  workflow_engine.rs
docs/: claude-agent-architecture.md  claude-code-agent-integration.md  claude-copilot-universal-framework.md  claude-copilot-workflow.md
examples/: debug_resize.rs  debug_test.rs
src/: batch.rs  cli.rs  constants.rs  error.rs  formats.rs  info.rs  lib.rs  logger.rs  main.rs  processing.rs  upload.rs  utils.rs  validation.rs  walrus.rs
tests/: common.rs  integration_tests.rs  main.rs  property_tests.rs
