[package]
name = "img-squeeze"
version = "0.1.0"
edition = "2021"
description = "A fast, efficient image compression tool written in Rust with parallel processing, batch compression, and decentralized storage support"
authors = ["luojiyin1987"]
license = "MIT"
repository = "https://github.com/luojiyin1987/img-squeeze"
keywords = ["image", "compression", "optimization", "parallel", "cli"]
categories = ["command-line-utilities", "multimedia::images"]
readme = "README.md"

[lib]
name = "img_squeeze"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
oxipng = { version = "9.1", features = ["parallel", "zopfli"], default-features = false }
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
rayon = "1.8"
num_cpus = "1.16"
walkdir = "2.4"
glob = "0.3"
tempfile = "3.10"

# Walrus storage integration
walrus_rs = "0.1.2"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.1"

[[bench]]
name = "compression_bench"
harness = false
