[package]
name = "img-squeeze"
version = "0.1.0"
edition = "2021"
authors = ["luojiyin <luojiyin@hotmail.com>"]
description = "A fast and efficient image compression tool with Walrus storage support"
license = "MIT"
repository = "https://github.com/luojiyin1987/img-squeeze"
homepage = "https://github.com/luojiyin1987/img-squeeze"
readme = "README.md"
keywords = ["image", "compression", "cli", "walrus", "blockchain"]
categories = ["command-line-utilities", "multimedia::images", "compression"]
exclude = ["target/", "tests/", "benches/", "*.png", "*.jpg", "*.webp"]

[lib]
name = "img_squeeze"
path = "src/lib.rs"

[[bin]]
name = "img-squeeze"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
image = { version = "0.25", features = ["jpeg", "png", "webp", "avif", "rayon"] }
oxipng = { version = "9.1", features = ["parallel", "zopfli"], default-features = false }
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
rayon = "1.8"
num_cpus = "1.16"
walkdir = "2.4"
glob = "0.3"
tempfile = "3.10"
sysinfo = "0.30"

# Walrus storage integration
walrus_rs = "0.1.2"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.1"

[[bench]]
name = "compression_bench"
harness = false
