[package]
name = "claude-agent"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code Team"]
description = "Claude Code Agent System for intelligent code analysis and workflow automation"
license = "MIT"
repository = "https://github.com/anthropics/claude-code"
keywords = ["claude", "code-analysis", "workflow", "automation", "ai"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# File system operations
walkdir = "2.3"
glob = "0.3"
tokio-fs = "0.1"

# HTTP client (for future web integrations)
reqwest = { version = "0.11", features = ["json"], optional = true }

# Command execution
tokio-process = "0.2"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration management
config = "0.13"

# Project detection
regex = "1.5"
once_cell = "1.8"

[dev-dependencies]
tempfile = "3.3"
tokio-test = "0.4"

[features]
default = ["web"]
web = ["reqwest"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "pr_review"
path = "examples/pr_review.rs"

[[example]]
name = "project_analysis"
path = "examples/project_analysis.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true